Fix overlapping suffixIcon when button is in loading state

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -251,6 +251,10 @@
   vertical-align: middle;
 }
 
+.suffixIcon.loading {
+  opacity: 0;
+}
+
 .suffixIcon > * {
   width: var(--icon-size);
   height: var(--icon-size);
